# ot_dsim

./: MANIFEST.in  __init__.py  asm.py  convert2otbn.py  dasm.py  pyproject.toml  setup.py  sim.py  sim_ecc_tests.py  sim_mulqacc_tests.py  sim_rsa_tests.py  test_new_instructions.py
.github/workflows/: wheels.yml
asm/: modexp.S  otbn_bn.asm
benchmarks/: benchmark_backends.py
bignum_lib/: __init__.py  c_backend.py  instructions.py  instructions_ot.py  machine.py
csrc/: ot_dsim_cops.c  ot_dsim_machine.c
tests/: test_c_backend.py  test_c_machine.py
